# housebot

./: .env  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
deploy/: house-dashboard.service  house.service  install-server.sh  nginx-house-dashboard.conf
house/: ai.py  alpaca.py  bot.py  cli.py  config.py  dashboard.py  db.py  execution.py  http.py  jsonlog.py  models.py  portfolio.py  reports.py  sources.py  utils.py
house.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_ai.py  test_bot.py  test_cli.py  test_config.py  test_dashboard.py  test_portfolio.py  test_sources.py  test_utils.py  test_vercel_entrypoint.py
