[project]
name = "house"
version = "0.1.0"
description = "Autonomous U.S. House long-short trading bot for Alpaca paper trading."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "pypdf>=5,<6",
]

[project.scripts]
house = "house.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]
