[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "house"
version = "0.1.0"
description = "Autonomous U.S. House long-short trading bot for Alpaca paper trading."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1.0",
  "pypdf>=5,<6",
]

[project.scripts]
app = "app:app"
house = "house.cli:main"

[tool.setuptools]
packages = ["house"]

[tool.pytest.ini_options]
pythonpath = ["."]
